[Enhancement] 尝试测试pixi，尚未成功â

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vant/weapp": "^1.10.3"
+    "@vant/weapp": "^1.10.3",
+    "pixi.js": "^6.3.2"
   }
 }
