--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
 //    "noUnusedParameters": true,
     "strict": false,
 //    "strictPropertyInitialization": true,
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020",
+//      "dom"
+    ],
     "typeRoots": [
       "./typings"
     ],
@@ -32,6 +35,6 @@
   ],
   "exclude": [
     "node_modules",
-    "miniprogram/miniprogram_npm"
+    "miniprogram_npm"
   ]
 }
