--- a/project.config.json
+++ b/project.config.json
@@ -51,7 +51,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wxd1456ddc8b073f35",
+  "appid": "wxef246ad51fd70fdd",
   "projectname": "Homi",
   "condition": {}
 }
