[Enhancement] 测试白噪音

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "navigationBarTextStyle": "black",
     "onReachBottomDistance": 50
   },
+  "requiredBackgroundModes": ["audio"],
   "tabBar": {
     "custom": true,
     "backgroundColor": "#ffffff",
