初步设计缓存机制

--- a/project.config.json
+++ b/project.config.json
@@ -45,12 +45,12 @@
     "tabIndent": "insertSpaces",
     "tabSize": 2
   },
-  "libVersion": "2.24.1",
+  "libVersion": "2.26.0",
   "packOptions": {
     "ignore": [],
     "include": []
   },
   "appid": "wxef246ad51fd70fdd",
-  "projectname": "Homi",
+  "projectname": "homi-miniprogram-client",
   "condition": {}
 }
