--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,12 @@
 FROM golang:1.19.1-bullseye
 
-WORKDIR /usr/local/go/src
+WORKDIR /usr/local/go/src/project
 
 COPY . .
+
+
+RUN go env -w GO111MODULE=on
+RUN go env -w GOPROXY=https://goproxy.cn,direct
 
 RUN go mod download
 
