--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
+    "clipboard": "^2.0.11",
     "eslint": "8.22.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
